# docs/swagger/swagger.json
@@ -35,7 +35,7 @@
                 "responses": {}
             }
         },
-        "/account/me": {
+        "/account/current": {
             "get": {
                 "security": [
                     {
@@ -83,9 +83,9 @@
                 "responses": {}
             }
         },
-        "/account/verify": {
+        "/account/signout": {
             "post": {
-                "description": "Sends a verification email or SMS to the user",
+                "description": "Logs out the user and invalidates the session/token",
                 "consumes": [
                     "application/json"
                 ],
@@ -95,22 +95,22 @@
                 "tags": [
                     "Account"
                 ],
-                "summary": "Send account verification",
+                "summary": "Sign out of the current account",
                 "parameters": [
                     {
-                        "description": "Verification request details",
+                        "description": "Sign-out request details",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.AccountVerificationForm"
+                            "$ref": "#/definitions/services.SignOutForm"
                         }
                     }
                 ],
                 "responses": {}
             }
         },
-        "/account/verify/complete": {
+        "/account/verification/complete": {
             "post": {
                 "description": "Completes the account verification process using a token",
                 "consumes": [
@@ -131,6 +131,33 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/services.CompleteAccountVerificationForm"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/account/verification/send": {
+            "post": {
+                "description": "Sends a verification email or SMS to the user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Send account verification",
+                "parameters": [
+                    {
+                        "description": "Verification request details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.AccountVerificationForm"
                         }
                     }
                 ],
@@ -206,6 +233,17 @@
                 "username": {
                     "type": "string",
                     "maxLength": 256
+                }
+            }
+        },
+        "services.SignOutForm": {
+            "type": "object",
+            "properties": {
+                "global": {
+                    "type": "boolean"
+                },
+                "token": {
+                    "type": "string"
                 }
             }
         }
